[gd_scene load_steps=7 format=3 uid="uid://df2bhnlb7vf2d"]

[ext_resource type="Script" path="res://Scripts/powerup.gd" id="1_cjist"]
[ext_resource type="Shader" path="res://Shaders/player.gdshader" id="1_utefs"]
[ext_resource type="Material" uid="uid://bhvf65kb6agss" path="res://Shaders/vampire.tres" id="3_86mx0"]
[ext_resource type="Texture2D" uid="uid://cuj6q372toykx" path="res://Sprites/Vampire.png" id="3_jlsjv"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1mvxo"]
shader = ExtResource("1_utefs")
shader_parameter/speed = 1.0
shader_parameter/tint = Color(1, 0, 0.662745, 1)
shader_parameter/span = 1.0
shader_parameter/start_time = 0.0
shader_parameter/applied = true

[sub_resource type="CircleShape2D" id="CircleShape2D_xg77t"]
radius = 26.0192

[node name="powerup" type="Area2D" node_paths=PackedStringArray("powerup_timer")]
material = SubResource("ShaderMaterial_1mvxo")
script = ExtResource("1_cjist")
powerup_timer = NodePath("powerup_timer")

[node name="powerup shape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xg77t")

[node name="powerup_timer" type="Timer" parent="."]
wait_time = 10.0

[node name="Vampire" type="Sprite2D" parent="."]
texture_filter = 1
material = ExtResource("3_86mx0")
texture = ExtResource("3_jlsjv")
hframes = 4
frame = 2

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="powerup_timer" to="." method="_on_powerup_timer_timeout"]
